--- a/functions/package.json
+++ b/functions/package.json
@@ -13,14 +13,13 @@
   },
   "main": "index.js",
   "dependencies": {
+    "dotenv": "^16.4.0",
     "firebase-admin": "^13.7.0",
     "firebase-functions": "^7.0.6",
-    "openai": "^6.25.0",
-    "dotenv": "^16.4.0"
+    "openai": "^6.25.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.4.1"
-
   },
   "private": true
 }
